<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:background="@drawable/transparent_background"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/home_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/home"
            android:onClick="addNewPlant"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/new_plant_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_plant"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Select your plant-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_your_plant_txt"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/select_plant_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/odaberi_biljku"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_plant_row"
        android:layout_below="@+id/select_your_plant_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:padding="10dp">
            <ImageView
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:id="@+id/new_plant_img"
                android:src="@drawable/ic_local_florist_black_24dp"/>
            <TextView
                android:id="@+id/plant_db_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acces_plant_db"
                android:padding="40dp"/>
    </LinearLayout>

    <!--Name your plant -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_plant_row"
        android:id="@+id/name_plant_txt"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nazovi_biljku"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="5dp"
            android:id="@+id/plant_name_box"
            android:background="@xml/round_edi_text"
            android:inputType="text"
            android:padding="7dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <!--Choose environment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_plant_txt"
        android:id="@+id/environment_linear"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/environment_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/odaberi_okolinu"/>
        <TableRow
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/indoor_img"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_black_24dp"/>
            <ImageView
                android:id="@+id/outdoor_img"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wb_sunny_black_24dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/indoor_txt"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indoor"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/outdoor_txt"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdoor"
                android:textAlignment="center"/>
        </TableRow>
    </LinearLayout>

    <Button
        android:id="@+id/create_plant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Create plant"
        android:textAlignment="center"
        android:layout_below="@+id/environment_linear"
        android:background="@drawable/transparent_background"/>
</RelativeLayout>
    </ScrollView>
</RelativeLayout>