<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    android:paddingTop="16sp"
    android:background="@drawable/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/transparent_background"

            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name_live"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temp_gauge"/>

                <io.sule.gaugelibrary.GaugeView
                    android:id="@+id/temperature"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/transparent_background"
                    gauge:innerCircleColor="#FFF"
                    gauge:outerCircleColor="#b04d4d"
                    gauge:showOuterShadow="false"
                    gauge:showOuterRim="false"
                    gauge:showInnerRim="false"
                    gauge:needleWidth="0.010"
                    gauge:needleHeight="0.40"
                    gauge:scaleStartValue="0"
                    gauge:scaleEndValue="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/soil_gauge"/>

                <io.sule.gaugelibrary.GaugeView
                    android:id="@+id/soil"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/transparent_background"
                    gauge:innerCircleColor="#FFF"
                    gauge:outerCircleColor="#956833"
                    gauge:showOuterShadow="false"
                    gauge:showOuterRim="false"
                    gauge:showInnerRim="false"
                    gauge:needleWidth="0.010"
                    gauge:needleHeight="0.40"
                    gauge:scaleStartValue="0"
                    gauge:scaleEndValue="100" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sun_gauge"/>
                <io.sule.gaugelibrary.GaugeView
                    android:id="@+id/sun"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/transparent_background"
                    gauge:innerCircleColor="#FFF"
                    gauge:outerCircleColor="#c7cd2d"
                    gauge:showOuterShadow="false"
                    gauge:showOuterRim="false"
                    gauge:showInnerRim="false"
                    gauge:needleWidth="0.010"
                    gauge:needleHeight="0.40"
                    gauge:scaleStartValue="0"
                    gauge:scaleEndValue="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/battery_gauge"/>
                <io.sule.gaugelibrary.GaugeView
                    android:id="@+id/battery"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/transparent_background"
                    gauge:innerCircleColor="#FFF"
                    gauge:outerCircleColor="#1ba9ae"
                    gauge:showOuterShadow="false"
                    gauge:showOuterRim="false"
                    gauge:showInnerRim="false"
                    gauge:needleWidth="0.010"
                    gauge:needleHeight="0.40"
                    gauge:scaleStartValue="0"
                    gauge:scaleEndValue="100" />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/transparent_background"
            android:text="Spremi"
            android:id="@+id/btn_spremi" />
    </LinearLayout>

</ScrollView>